--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 						<div class="layer">
 							<h3>Trial Python Calculator</h3>
 							<p>My first Python Code.</p>
-							<a href="https://github.com/SopradicCoder/Trial-Python-Calculator/blob/main/calculator.py"><i class="fas fa-external-link-alt"></i></a>
+							<a href="https://github.com/JohnJandayan/Trial-Python-Calculator"><i class="fas fa-external-link-alt"></i></a>
 						</div>	
 					</div>		        							
 				</div>
