--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="social-2">
 			<a href="https://www.linkedin.com/in/john-vianney-jandayan-b04584267/"><i class='bx bxl-linkedin'></i></a>
 			<a href="https://www.instagram.com/jandy_jv/"><i class='bx bxl-instagram'></i></a>
-			<a href="https://github.com/SopradicCoder"><i class='bx bxl-github'></i></a>
+			<a href="https://github.com/JohnJandayan"><i class='bx bxl-github'></i></a>
 			<a href="https://www.facebook.com/john.jandy.1"><i class='bx bxl-facebook-circle'></i></a>
 	</div>	
 	<div class="navbar">
